<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>de.tuebingen.sfs</groupId>
    <artifactId>etymology-standalone</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <build>
        <resources>
            <resource>
                <directory>src/main/java</directory>
            </resource>
        </resources>
        <testResources>
            <testResource>
                <directory>src/test/java</directory>
            </testResource>
        </testResources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>16</source>
                    <target>16</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.0</version>
                <configuration>
                    <argLine>
                        --illegal-access=permit
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>2.22.0</version>
                <configuration>
                    <argLine>
                        --illegal-access=permit
                    </argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <junit-platform.version>5.3.1</junit-platform.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>de.tuebingen.sfs.eie.components.etymology</groupId>
            <artifactId>etinen-etymology</artifactId>
            <version>0.0.1-beta</version>
        </dependency>
        <dependency>
            <groupId>de.tuebingen.sfs.eie.shared</groupId>
            <artifactId>shared</artifactId>
            <version>0.0.1-beta</version>
        </dependency>
        <dependency>
            <groupId>de.tuebingen.sfs.psl.gui</groupId>
            <artifactId>psl-ragviewer</artifactId>
            <version>0.0.1-beta</version>
        </dependency>
    </dependencies>

    <modules>
        <module>etinen-etymology</module>
        <module>etinen-shared</module>
        <module>psl-infrastructure</module>
        <module>psl-ragviewer</module>
        <module>iwsa</module>
        <module>iwsa/cldf-java</module>
    </modules>
</project>